Fix issue with Jax

--- a/kohya_LoRA_trainer_XL.ipynb
+++ b/kohya_LoRA_trainer_XL.ipynb
@@ -178,7 +178,8 @@
         "\n",
         "main()\n",
         "!pip install prodigyopt==1.0\n",
-        "!pip install \"jax[cuda11_pip]==0.4.23\" -f https://storage.googleapis.com/jax-releases/jax_cuda_releases.html"
+        "!pip uninstall -y flax\n",
+        "!pip install flax \"jax[cuda11_pip]==0.4.23\" -f https://storage.googleapis.com/jax-releases/jax_cuda_releases.html"
       ]
     },
     {
