--- a/kohya_LoRA_trainer_XL.ipynb
+++ b/kohya_LoRA_trainer_XL.ipynb
@@ -37,7 +37,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -51,7 +51,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "Q3-qSjidu66l",
         "cellView": "form",
@@ -92,7 +92,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "_u3q60di584x",
         "outputId": "ae8bc274-d568-4b45-ee6d-05cbc8e2ad4c",
@@ -585,9 +585,9 @@
         "    clone_repo(infinite_image_browser_url, infinite_image_browser_dir, \"main\")\n",
         "    clone_repo(discordia_archivum_url, discordia_archivum_dir, \"main\")\n",
         "\n",
-        "    !pip install -q --upgrade -r {infinite_image_browser_deps}\n",
-        "    !pip install python-dotenv\n",
-        "    !pip install -q --upgrade -r {discordia_archivum_deps}\n",
+        "    !pip install -q --upgrade -r {infinite_image_browser_deps}  numpy==1.26.4\n",
+        "    !pip install python-dotenv  numpy==1.26.4\n",
+        "    !pip install -q --upgrade -r {discordia_archivum_deps}  numpy==1.26.4\n",
         "\n",
         "def install_dependencies():\n",
         "    requirements_file = os.path.join(repo_dir, \"requirements.txt\")\n",
@@ -601,12 +601,12 @@
         "\n",
         "    if '2.0.1+cu118' in torch.__version__:\n",
         "        if 'T4' in gpu_info:\n",
-        "            !pip install -q {t4_xformers_wheel}\n",
+        "            !pip install -q {t4_xformers_wheel}  numpy==1.26.4\n",
         "        else:\n",
-        "            !pip install -q xformers==0.0.20\n",
+        "            !pip install -q xformers==0.0.20  numpy==1.26.4\n",
         "    else:\n",
-        "        !pip install -q torch==2.0.0+cu118 torchvision==0.15.1+cu118 torchaudio==2.0.1+cu118 torchtext==0.15.1 torchdata==0.6.0 --extra-index-url https://download.pytorch.org/whl/cu118 -U\n",
-        "        !pip install -q xformers==0.0.19 triton==2.0.0 -U\n",
+        "        !pip install -q numpy==1.26.4 torch==2.0.0+cu118 torchvision==0.15.1+cu118 torchaudio==2.0.1+cu118 torchtext==0.15.1 torchdata==0.6.0 --extra-index-url https://download.pytorch.org/whl/cu118 -U\n",
+        "        !pip install -q numpy==1.26.4 xformers==0.0.19 triton==2.0.0 -U\n",
         "\n",
         "    from accelerate.utils import write_basic_config\n",
         "\n",
@@ -629,14 +629,14 @@
         "    prepare_environment()\n",
         "\n",
         "main()\n",
-        "!pip install prodigyopt==1.0\n",
+        "!pip install prodigyopt==1.0  numpy==1.26.4\n",
         "!pip uninstall -y flax\n",
-        "!pip install flax \"jax[cuda11_pip]==0.4.23\" -f https://storage.googleapis.com/jax-releases/jax_cuda_releases.html"
+        "!pip install flax  numpy==1.26.4 \"jax[cuda11_pip]==0.4.23\" -f https://storage.googleapis.com/jax-releases/jax_cuda_releases.html"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "wrYGu-WxFbsq",
         "outputId": "7d593856-6033-4c8b-cb56-15bed190117f",
@@ -840,7 +840,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "cellView": "form",
         "id": "kh7CeDqK4l3Y",
@@ -884,7 +884,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "id": "hhgatqF3leHJ",
         "outputId": "663f7c44-5f80-41ce-946b-47186743fc13",
@@ -1005,7 +1005,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "cellView": "form",
         "id": "cJgLfRtlHSjw",
@@ -1165,7 +1165,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "cellView": "form",
         "id": "JNlw3u8arwir",
@@ -1247,7 +1247,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "cellView": "form",
         "id": "krvamf9L-Lvc",
@@ -1321,7 +1321,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "id": "-Z4w3lfFKLjr",
         "cellView": "form",
